--- a/wiki/cs/Spreadsheet_Workbench.html
+++ b/wiki/cs/Spreadsheet_Workbench.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Spreadsheet Workbench/cs</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="cs" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Spreadsheet+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Spreadsheet Workbench (1% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich Spreadsheet (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Spreadsheet (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Spreadsheet_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Spreadsheet Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Hesap Tablosu Tezgah&#305; (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Entorno de trabajo Hoja de c&aacute;lculo (85% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier Spreadsheet (93% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier Spreadsheet (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Spreadsheet Workbench (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="../it/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Spreadsheet (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pacy Arkusz Kalkulacyjny (93% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../it/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Spreadsheet (94% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pacy Arkusz Kalkulacyjny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de Trabalho Folha de C&aacute;lculo (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Bancada de trabalho Spreadsheet (79% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Spreadsheet_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelierul Foi de calcul (4% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -571,10 +571,10 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a class="mw-selflink selflink">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a class="mw-selflink selflink">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -582,35 +582,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20250913091038
+Cached time: 20260111234713
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.161 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.165 seconds
+Real time usage: 0.269 seconds
 Preprocessor visited node count: 821/1000000
 Post&#8208;expand include size: 19055/2097152 bytes
 Template argument size: 4580/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7135/5000000 bytes
+Unstrip post&#8208;expand size: 7150/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.722      1 -total
- 17.88%    4.957      1 Template:Spreadsheet_Tools_navi/cs
- 15.40%    4.268      1 Template:Userdocnavi/cs
-  9.17%    2.542      2 Template:Navigation_menu_2
-  8.08%    2.240     17 Template:Incode
-  6.86%    1.901      1 Template:Code
-  6.34%    1.759      2 Template:Docnav
-  6.03%    1.673     14 Template:MenuCommand
-  4.96%    1.376     10 Template:KEY
-  4.58%    1.271      2 Template:Prettytable
+100.00%   57.292      1 -total
+ 19.43%   11.130      1 Template:Spreadsheet_Tools_navi/cs
+ 15.65%    8.965      1 Template:Userdocnavi/cs
+ 11.66%    6.681      2 Template:Navigation_menu_2
+  8.97%    5.140      2 Template:Prettytable
+  6.70%    3.837      2 Template:Docnav
+  6.52%    3.736     17 Template:Incode
+  5.71%    3.271      1 Template:Code
+  5.16%    2.955      2 Template:Caption
+  4.68%    2.683     14 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:65748-0!canonical and timestamp 20250913091038 and revision id 1641186. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:65748-0!canonical and timestamp 20260111234713 and revision id 1641186. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
